--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="src" output="target/classes" path="src">
 		<attributes>
-			<attribute name="module" value="true"/>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Downloads/pdfbox-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Downloads/pdfbox-debugger-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Downloads/pdfbox-tools-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Downloads/xmpbox-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Downloads/preflight-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Downloads/fontbox-3.0.0-alpha3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
