--- a/.classpath
+++ b/.classpath
@@ -8,19 +8,20 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Downloads/pdfbox-3.0.0-alpha3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Downloads/pdfbox-debugger-3.0.0-alpha3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Downloads/pdfbox-tools-3.0.0-alpha3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Downloads/xmpbox-3.0.0-alpha3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Downloads/preflight-3.0.0-alpha3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Downloads/fontbox-3.0.0-alpha3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Documents/GitHub/Java/Java-CV/src/fontbox-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Documents/GitHub/Java/Java-CV/src/pdfbox-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Documents/GitHub/Java/Java-CV/src/pdfbox-debugger-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Documents/GitHub/Java/Java-CV/src/pdfbox-tools-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Documents/GitHub/Java/Java-CV/src/preflight-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Documents/GitHub/Java/Java-CV/src/xmpbox-3.0.0-alpha3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
