--- a/.classpath
+++ b/.classpath
@@ -17,11 +17,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Documents/GitHub/Java/Java-CV/src/fontbox-3.0.0-alpha3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Documents/GitHub/Java/Java-CV/src/pdfbox-3.0.0-alpha3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Documents/GitHub/Java/Java-CV/src/pdfbox-debugger-3.0.0-alpha3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Documents/GitHub/Java/Java-CV/src/pdfbox-tools-3.0.0-alpha3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Documents/GitHub/Java/Java-CV/src/preflight-3.0.0-alpha3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Jesper.Kemppainen/Documents/GitHub/Java/Java-CV/src/xmpbox-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="src/fontbox-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="src/pdfbox-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="src/pdfbox-debugger-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="src/pdfbox-tools-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="src/preflight-3.0.0-alpha3.jar"/>
+	<classpathentry kind="lib" path="src/xmpbox-3.0.0-alpha3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
