--- a/.classpath
+++ b/.classpath
@@ -23,5 +23,6 @@
 	<classpathentry kind="lib" path="src/pdfbox-tools-2.0.27.jar"/>
 	<classpathentry kind="lib" path="src/preflight-2.0.27.jar"/>
 	<classpathentry kind="lib" path="src/xmpbox-2.0.27.jar"/>
+	<classpathentry kind="lib" path="src/jcalendar-1.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
