--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,6 @@
 	<classpathentry kind="lib" path="src/preflight-2.0.27.jar"/>
 	<classpathentry kind="lib" path="src/xmpbox-2.0.27.jar"/>
 	<classpathentry kind="lib" path="src/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="src/pdfbox2-layout-1.0.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
