--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,13 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Java-CV</name>
   <build>
-    <sourceDirectory>src</sourceDirectory>
+      <resources>
+            <resource>
+                <directory>src/main</directory>
+                <filtering>true</filtering>
+            </resource>
+      </resources>
+    <sourceDirectory>src/main</sourceDirectory>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -17,43 +23,70 @@
       </plugin>
     </plugins>
   </build>
-   
+    
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
    <dependencies>  
       <dependency> 
          <groupId>org.apache.pdfbox</groupId> 
          <artifactId>pdfbox</artifactId> 
-         <version>2.0.1</version> 
+         <version>2.0.27</version>
       </dependency>   
    
       <dependency> 
          <groupId>org.apache.pdfbox</groupId> 
          <artifactId>fontbox</artifactId> 
-         <version>2.0.0</version> 
+         <version>2.0.27</version>
       </dependency>
       
       <dependency>  
          <groupId>org.apache.pdfbox</groupId> 
          <artifactId>jempbox</artifactId> 
-         <version>1.8.11</version> 
+         <version>1.8.17</version>
       </dependency> 
         
       <dependency>
          <groupId>org.apache.pdfbox</groupId> 
          <artifactId>xmpbox</artifactId> 
-         <version>2.0.0</version> 
+         <version>2.0.27</version>
       </dependency> 
      
       <dependency> 
          <groupId>org.apache.pdfbox</groupId> 
          <artifactId>preflight</artifactId> 
-         <version>2.0.0</version> 
+         <version>2.0.27</version>
       </dependency> 
-     
-      <dependency> 
+
+       <dependency>
          <groupId>org.apache.pdfbox</groupId> 
-         <artifactId>pdfbox-tools</artifactId> 
-         <version>2.0.0</version> 
+         <artifactId>pdfbox-tools</artifactId>
+         <version>2.0.27</version>
       </dependency>
+       <dependency>
+           <groupId>com.github.ralfstuckert.pdfbox-layout</groupId>
+           <artifactId>pdfbox2-layout</artifactId>
+           <version>1.0.1</version>
+       </dependency>
+       <dependency>
+           <groupId>com.toedter</groupId>
+           <artifactId>jcalendar</artifactId>
+           <version>1.4</version>
+           <scope>compile</scope>
+       </dependency>
 
    </dependencies>
+   <dependencyManagement>
+   	<dependencies>
+   		<dependency>
+   			<groupId>com.github.ralfstuckert.pdfbox-layout</groupId>
+   			<artifactId>pdfbox2-layout</artifactId>
+   			<version>1.0.1</version>
+   		</dependency>
+   	</dependencies>
+   </dependencyManagement>
 </project>
