--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <build>
       <resources>
             <resource>
-                <directory>src/main</directory>
+                <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
       </resources>
@@ -21,6 +21,20 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+        <plugin>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-maven-plugin</artifactId>
+            <version>1.8.20-RC</version>
+            <executions>
+                <execution>
+                    <id>compile</id>
+                    <phase>process-sources</phase>
+                    <goals>
+                        <goal>compile</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
     </plugins>
   </build>
     
@@ -77,6 +91,11 @@
            <artifactId>jcalendar</artifactId>
            <version>1.4</version>
            <scope>compile</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.jetbrains.kotlin</groupId>
+           <artifactId>kotlin-stdlib</artifactId>
+           <version>1.8.20-RC</version>
        </dependency>
 
    </dependencies>
